Fix some spacing

--- a/css/main.css
+++ b/css/main.css
@@ -149,9 +149,13 @@ article .content {
 }
 
 .posts {
-	padding-left: 1em;
+	padding-left: 0;
 	margin: 0;
 	color: #888;
+}
+
+.posts li {
+	margin-left: 1.2em;
 }
 
 .posts a {
@@ -202,6 +206,7 @@ article .content {
 			"about projects" auto
 			"posts posts" auto
 			/1fr   1fr;
+		grid-gap: 1em;
 	}
 
 	.about {
@@ -218,6 +223,7 @@ article .content {
 
 	nav ul {
 		columns: 2;
+		column-gap: 1em;
 	}
 }
 
